<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:id="@+id/spinner"
        android:entries="@array/beer_colors"

        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/find_beer"
        android:id="@+id/find_beer"

        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/brands"
        android:id="@+id/textId"
        />

<Button
    android:layout_marginTop="20dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:text="@string/second_app"
    android:id="@+id/seconApp"
    />
    <Button
        android:id="@+id/go_to_stopWatch_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Stop Watch Activity"
        android:layout_gravity="bottom|end"
        android:layout_marginTop="280dp"
        />

</LinearLayout>